line-gateway/.openshift/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: devops-ex-line-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
   - hosts:
     - line-gateway.istio.showcase.literalice.com
     port:
       name: https
       number: 443
       protocol: HTTPS
     tls:
       mode: SIMPLE
       privateKey: /etc/istio/ingressgateway-certs/tls.key
       serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
