line-gateway/.openshift/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: devops-ex-line-gateway
spec:
  gateways:
  - devops-ex-line-gateway
  hosts:
  - line-gateway.istio.showcase.literalice.com
  http:
  - route:
    - destination:
        host: devops-ex-line-gateway
        subset: v1
